[tool.poetry]
name = "paw-lu"
version = "0.1.0"
description = ""
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.4.0"
termtosvg = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
